@@ -27,7 +27,6 @@
 package it.tidalwave.thesefoolishthings.examples.jpafinderexample;
 
 import javax.annotation.Nonnull;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -50,7 +49,7 @@ import it.tidalwave.thesefoolishthings.examples.person.Person;
 // START SNIPPET SimpleAsDelegateProvider
 public class SimpleAsDelegateProvider implements AsDelegateProvider
   {
-    private static final List<Class<?>> ROLES = Arrays.asList(Persistable.class, Removable.class, Findable.class);
+    private static final List<Class<?>> ROLES = List.of(Persistable.class, Removable.class, Findable.class);
 
     @Override @Nonnull
     public AsDelegate createAsDelegate (@Nonnull final Object datum)
